Convert Kotlin example to Gradle